# crabcity

./: .bazelrc  .bazelrc.ci  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md
.claude/commands/: biko.md  corbz.md  doris.md
.github/workflows/: ci.yml  release.yml
bazel/: cargo_version.bzl
bazel/config/platform/rust/: BUILD.bazel
docs/: architecture.md  claude-jsonl-protocol.md  configuration.md  operations.md  state-inference.md  web-terminal.md
docs/accounts/: architecture.md  design.md  implementation.md  m-interconnect.md  m0-plan.md  m1-plan.md
docs/design/: startup-experience.md
docs/postmortem/: jest_coverage_bazel.md
scripts/: be-dev.sh  bump-version.sh  coverage.sh  fe-dev.sh  install.sh  kani.sh  quality_gates.sh  tag-release.sh
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  lint.sh  linters.bzl
