[workspace]

members = [
    "packages/claude_convo",
    "packages/compositor",
    "packages/crab_city",
    "packages/crab_city_auth",
    "packages/crab_city_ui/crate",
    "packages/pty_manager",
    "packages/spike_iroh_relay",
    "packages/tty_wrapper",
    "packages/virtual_terminal",
]
# crab_city_ui/crate requires CRAB_CITY_UI_PATH env var pointing to SvelteKit build output.
# Exclude from default `cargo build` to avoid build failures. Build with:
#   CRAB_CITY_UI_PATH=packages/crab_city_ui/build cargo build -p crab_city_ui
default-members = [
    "packages/claude_convo",
    "packages/compositor",
    "packages/crab_city",
    "packages/crab_city_auth",
    "packages/pty_manager",
    "packages/spike_iroh_relay",
    "packages/tty_wrapper",
    "packages/virtual_terminal",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
iroh = "=0.96.1"
iroh-relay = { version = "=0.96.1", features = ["server"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
maud = { version = "0.27.0", features = ["axum"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "gzip",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13.2", features = ["v4", "v7"] }
