module(
    name = "crabcity",
    repo_name = "crabcity",
)

bazel_dep(name = "platforms", version = "1.0.0")

################################################################################
# Utilities ####################################################################
################################################################################

# Helpers
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")

# Packaging
bazel_dep(name = "rules_pkg", version = "1.0.1", dev_dependency = True)

# OCI Container Images
bazel_dep(name = "rules_oci", version = "2.2.6")

use_extension("@rules_oci//oci:extensions.bzl", "oci")

################################################################################
# JavaScript / TypeScript ######################################################
################################################################################

bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "aspect_rules_jest", version = "0.24.3")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//packages/crab_city_ui:.npmrc",
    pnpm_lock = "//packages/crab_city_ui:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "//packages/crab_city_ui:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

################################################################################
# Rust #########################################################################
################################################################################

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["x86_64-unknown-linux-musl"],
    versions = ["1.91.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate_index = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Core utilities
crate_index.spec(
    package = "anyhow",
    version = "1.0",
)
crate_index.spec(
    features = ["serde"],
    package = "chrono",
    version = "0.4",
)
crate_index.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5",
)
crate_index.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate_index.spec(
    package = "serde_json",
    version = "1.0",
)
crate_index.spec(
    package = "thiserror",
    version = "1.0",
)
crate_index.spec(
    package = "regex",
    version = "1.5",
)
crate_index.spec(
    package = "rand",
    version = "0.8",
)
crate_index.spec(
    package = "tempfile",
    version = "3.15",
)
crate_index.spec(
    features = [
        "v4",
        "serde",
    ],
    package = "uuid",
    version = "1.5",
)

# Async / Tokio
crate_index.spec(
    features = ["full"],
    package = "tokio",
    version = "1.40.0",
)
crate_index.spec(
    package = "tokio-test",
    version = "0.4.4",
)
crate_index.spec(
    features = ["connect"],
    package = "tokio-tungstenite",
    version = "0.24",
)
crate_index.spec(
    features = [
        "full",
        "codec",
    ],
    package = "tokio-util",
    version = "0.7",
)
crate_index.spec(
    package = "futures",
    version = "0.3.30",
)
crate_index.spec(
    features = ["sink"],
    package = "futures-util",
    version = "0.3.30",
)

# Web framework
crate_index.spec(
    features = [
        "macros",
        "ws",
    ],
    package = "axum",
    version = "0.8",
)
crate_index.spec(
    features = ["typed-header"],
    package = "axum-extra",
    version = "0.10.0",
)
crate_index.spec(
    features = ["axum"],
    package = "maud",
    version = "0.27.0",
)
crate_index.spec(
    package = "tower",
    version = "0.5",
)
crate_index.spec(
    features = [
        "cors",
        "fs",
        "trace",
    ],
    package = "tower-http",
    version = "0.6",
)
crate_index.spec(
    default_features = False,
    features = [
        "rustls-tls",
        "http2",
        "charset",
        "gzip",
        "json",
    ],
    package = "reqwest",
    version = "0.12",
)

# Logging
crate_index.spec(
    package = "tracing",
    version = "0.1",
)
crate_index.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)

# Database
crate_index.spec(
    features = [
        "runtime-tokio",
        "sqlite",
        "migrate",
        "chrono",
        "uuid",
    ],
    package = "sqlx",
    version = "0.7",
)

# Auth
crate_index.spec(
    package = "argon2",
    version = "0.5",
)
crate_index.spec(
    package = "password-hash",
    version = "0.5",
)
crate_index.spec(
    package = "rpassword",
    version = "7",
)

# PTY / terminal
crate_index.spec(
    package = "portable-pty",
    version = "0.8",
)
crate_index.spec(
    features = [
        "signal",
        "term",
    ],
    package = "nix",
    version = "0.29",
)
crate_index.spec(
    package = "ratatui",
    version = "0.29",
)

# File / directory utilities
crate_index.spec(
    package = "dirs",
    version = "5.0",
)
crate_index.spec(
    package = "ignore",
    version = "0.4",
)
crate_index.spec(
    package = "walkdir",
    version = "0.1",
)

# Diff / syntax highlighting
crate_index.spec(
    package = "similar",
    version = "2",
)
crate_index.spec(
    package = "syndiff",
    version = "0.2",
)
crate_index.spec(
    package = "tree-sitter",
    version = "0.26",
)
crate_index.spec(
    package = "tree-sitter-language",
    version = "0.1",
)
crate_index.spec(
    package = "tree-sitter-rust",
    version = "0.24",
)
crate_index.spec(
    package = "tree-sitter-javascript",
    version = "0.25",
)
crate_index.spec(
    package = "tree-sitter-typescript",
    version = "0.23",
)
crate_index.spec(
    package = "tree-sitter-python",
    version = "0.25",
)
crate_index.spec(
    package = "tree-sitter-go",
    version = "0.25",
)
crate_index.spec(
    package = "tree-sitter-json",
    version = "0.24",
)
crate_index.spec(
    package = "tree-sitter-toml-ng",
    version = "0.7",
)
crate_index.spec(
    package = "tree-sitter-css",
    version = "0.25",
)
crate_index.spec(
    package = "tree-sitter-html",
    version = "0.23",
)
crate_index.spec(
    package = "tree-sitter-bash",
    version = "0.25",
)

# Embedded UI assets
crate_index.spec(
    features = [
        "interpolate-folder-path",
        "deterministic-timestamps",
        "include-exclude",
    ],
    package = "rust-embed",
    version = "8",
)
crate_index.spec(
    package = "mime_guess",
    version = "2",
)

# Toolpath - git integration
crate_index.spec(
    package = "git2",
    version = "0.19",
)
crate_index.from_specs(name = "crate_index")
use_repo(crate_index, "crate_index")

################################################################################
# CC Toolchains ################################################################
################################################################################

# Default CC toolchain
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "21.1.6",
    # Use "none" stdlib on macOS to use system libraries and avoid
    # LLVM-bundled libunwind.1.dylib @rpath issues with bazel's test runner
    stdlib = {
        "darwin-aarch64": "none",
        "darwin-x86_64": "none",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# Platform-independent CC toolchain
bazel_dep(name = "toolchains_musl", version = "0.1.27")
