module(
    name = "crabcity",
    repo_name = "crabcity",
)

bazel_dep(name = "platforms", version = "1.0.0")

################################################################################
# Utilities ####################################################################
################################################################################

# Helpers
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")

# Packaging
bazel_dep(name = "rules_pkg", version = "1.0.1", dev_dependency = True)

# OCI Container Images
bazel_dep(name = "rules_oci", version = "2.2.6")

use_extension("@rules_oci//oci:extensions.bzl", "oci")

################################################################################
# JavaScript / TypeScript ######################################################
################################################################################

bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "aspect_rules_jest", version = "0.24.3")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//packages/crab_city_ui:.npmrc",
    pnpm_lock = "//packages/crab_city_ui:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "//packages/crab_city_ui:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

################################################################################
# Rust #########################################################################
################################################################################

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["x86_64-unknown-linux-musl"],
    versions = ["1.91.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate_index = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Use the real Cargo workspace for dependency resolution. This ensures Bazel
# resolves the exact same dependency tree as `cargo build`, including
# default-features = false on transitive deps like rustls (ring-only, no aws-lc).
crate_index.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate_index, "crate_index")

################################################################################
# CC Toolchains ################################################################
################################################################################

# Default CC toolchain
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "21.1.6",
    # Use "none" stdlib on macOS to use system libraries and avoid
    # LLVM-bundled libunwind.1.dylib @rpath issues with bazel's test runner
    stdlib = {
        "darwin-aarch64": "none",
        "darwin-x86_64": "none",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# Platform-independent CC toolchain
bazel_dep(name = "toolchains_musl", version = "0.1.27")
