"""Formatting tools for the repository."""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

package(default_visibility = ["//visibility:public"])

format_multirun(
    name = "format",
    rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
)

format_test(
    name = "format_test",
    size = "small",
    no_sandbox = True,
    rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    workspace = "//:MODULE.bazel",
)
